<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">技加大师</string>
    <string name="text_home" translatable="false">首页</string>
    <string name="text_order" translatable="false">订单</string>
    <string name="text_me" translatable="false">我的</string>
    <string name="sure" translatable="false">确定</string>
    <string name="login" translatable="false">登录</string>
    <string name="register_a_new_user" translatable="false">新用户注册</string>
    <string name="test_company" translatable="false">深圳市深立新三维技术有限公司</string>
    <string name="what_are_you_looking_for" translatable="false">订单查询</string>
    <string name="str_type" translatable="false">种&#8195;&#8195;类</string>
    <string name="str_order" translatable="false">订&#8194;单&#8194;号</string>
    <string name="str_money" translatable="false">报&#8194;价&#8194;人</string>
    <string name="search_hint" translatable="false">搜索订单号或跟单人查询</string>
    <string name="str_company_address" tools:ignore="MissingTranslation">购货方名称：红品晶英科技（深圳）有限公司\n联系地址：深圳市宝安区福永街道凤凰第二工业区腾丰大道176号</string>
    <string name="touch_to_focus" translatable="false">触摸屏幕对焦</string>
    <string name="scan" translatable="false">扫一扫</string>
    <string name="order" translatable="false">问题反馈</string>
    <string name="Logistics" translatable="false">物流查询</string>
    <string name="contact_way" translatable="false">联系方式</string>
    <string name="input_express_no" translatable="false">输入快递单号</string>
    <string name="search_history" translatable="false">搜索历史</string>
    <string name="clear_history_record" translatable="false">清除历史记录</string>
    <string name="search" translatable="false">搜索</string>
    <string name="search_result" translatable="false">搜索结果</string>
    <string name="smssdk_default_country" translatable="false">中国</string>
    <string name="smssdk_network_error">网络异常，请稍后重试</string>
    <string name="smssdk_busy_hint">操作频繁请稍等</string>
    <string name="smssdk_get_code">获取验证码</string>
    <string name="error_code">验证码错误</string>
    <string name="smssdk_verify">注册验证</string>
    <string name="smssdk_sms_verify">短信验证</string>
    <string name="smssdk_audio_verify">语音验证</string>
    <string name="smssdk_dont_use_demo_appkey">此APPKEY仅供测试使用，且不定期失效，请到mob.com后台申请正式APPKEY</string>
    <!-- 隐私协议弹框 -->
    <string name="smsdemo_authorize_dialog_title">服务授权</string>
    <string name="smsdemo_authorize_dialog_content">欢迎您使用MobTech提供的演示DEMO，SMSSDK为开发者提供完全免费的短信验证码服务，顶级通道3秒下发，适用于登录注册、找回密码、支付认证等场景。我们将依据MobTech的《隐私政策》来帮助你了解我们需要收集哪些数据。请您详细查看我们的隐私政策，详见</string>
    <string name="smsdemo_authorize_dialog_reject">拒绝</string>
    <string name="smsdemo_authorize_dialog_accept">同意</string>
</resources>