<?xml version="1.0" encoding="utf-8"?>
<com.flyco.roundview.RoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:rv_backgroundColor="@color/white"
    app:rv_cornerRadius="@dimen/_5dp"
    android:padding="@dimen/_20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/smsdemo_authorize_dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxLines="2"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="#202122"
        android:text="@string/smsdemo_authorize_dialog_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scrollbarThumbVertical="@null">
        <TextView
            android:id="@+id/smsdemo_authorize_dialog_content_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#555555"
            android:text="@string/smsdemo_authorize_dialog_content"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <com.flyco.roundview.RoundTextView
            android:id="@+id/smsdemo_authorize_dialog_reject_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            app:rv_cornerRadius="@dimen/_15dp"
            app:rv_backgroundColor="@color/grey_e"
            app:rv_textPressColor="@color/grey_c9"
            android:textSize="18dp"
            android:textColor="#202122"
            android:text="@string/smsdemo_authorize_dialog_reject"/>
        <com.flyco.roundview.RoundTextView
            android:id="@+id/smsdemo_authorize_dialog_accept_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            app:rv_cornerRadius="@dimen/_15dp"
            app:rv_backgroundColor="@color/colorPrimary"
            app:rv_textPressColor="@color/grey_c9"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:text="@string/smsdemo_authorize_dialog_accept"/>
    </LinearLayout>

</com.flyco.roundview.RoundLinearLayout>